fix alignment

--- a/src/Entry/styles.module.css
+++ b/src/Entry/styles.module.css
@@ -52,4 +52,7 @@
     .container {
         flex-direction: row;
     }
+    .imageContainer {
+        align-self: flex-start;
+    }
 }
